<resources>
    <string name="app_name">Clarity</string>

    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_like">Likes</string>
    <string name="nav_drawer_setting">Settings</string>
    <string name="nav_drawer_logout">Logout</string>
    <string name="nav_drawer_header">Your name here</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="home_fragment_tag">HOME_FRAGMENT</string>
    <string name="like_fragment_tag">LIKE_FRAGMENT</string>
    <string name="setting_fragment_tag">SETTING_FRAGMENT</string>
    <string name="channel_search_fragment_tag">CHANNEL_SEARCH_FRAGMENT</string>

    <string name="menu_search">Search</string>

    <string name="toolbar_login_activity">Login</string>
    <string name="toolbar_register_activity">Register</string>
    <string name="toolbar_home_activity">Home</string>

    <string name="player_service_pause">Pause</string>
    <string name="player_service_play">Play</string>
    <string name="player_service_wifi_lock">APPRICOTT_WIFI_LOCK</string>
    <string name="player_service_wake_lock">APPRICOTT_WAKE_LOCK</string>

    <string name="home_activity_channel_bundle">CHANNEL</string>
    <string name="home_activity_episode_bundle">EPISODE</string>
    <string name="home_activity_podcast_bundle">PODCAST</string>

    <string name="splash_content_desc">Logo Gif</string>

    <string name="register_button">Register</string>
    <string name="registration">Registration</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="survey_prompt">You don\'t have any channels! Lets create one.\n
                                 Select the topics you like.\n\n</string>

    <string name="category_1">TV &amp; Film</string>
    <string name="category_2">Sports &amp; Recreation</string>
    <string name="category_3">Technology</string>
    <string name="category_4">History</string>
    <string name="category_5">News &amp; Politics</string>
    <string name="category_6">Religion &amp; Spirituality</string>

    <string name="description">description</string>
    <string name="title">title</string>
    <string name="registered_login_type">1</string>
    <string name="facebook_login_type">2</string>
    <string name="google_login_type">3</string>
    <string name="google_request_code">5</string>

    <string name="create">Create Channel</string>
    <string name="shuffle">Shuffle</string>
    <string name="search">Search</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="search_result">Search Result</string>
    <string name="no_auth">Username or password is incorrect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playback_speed_key">PLAYBACK_SPEED</string>
    <string name="playback_speed_action">PLAYBACK_SPEED_ACTION</string>
    <string name="fragment_dialog_playback_speed_title">Playback Speed</string>
    <string name="fragment_dialog_playback_speed_ok">OK</string>
    <string name="fragment_dialog_playback_speed_cancel">Cancel</string>
</resources>
