<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@drawable/ic_nav_drawer_channel"
            android:title="@string/nav_drawer_home" />
        <item
            android:id="@+id/nav_like_fragment"
            android:icon="@drawable/ic_nav_drawer_like"
            android:title="@string/nav_drawer_like" />
    </group>

    <group
        android:id="@+id/nav_group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting_fragment"
            android:icon="@drawable/ic_nav_drawer_setting"
            android:title="@string/nav_drawer_setting"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_drawer_logout"
            android:title="@string/nav_drawer_logout" />
    </group>
</menu>